# metaqs-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.staging.yml  docker-compose.yml  languagetool-swagger.json  metaqs-api.yml  prestart.sh  pyproject.toml
.github/workflows/: build_fastapi.yml  push_fastapi.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_table_stats.py  0002_tables_analytics_raw.py  0003_add_portal_tree_to_stat_type_enum.py
app/: http.py  main.py  score.py
app/analytics/: analytics.py  resource_import.py  search_stats.py  spellcheck.py
app/api/: __init__.py  auth.py  util.py
app/api/languagetool/: api.py
app/api/v1/: __init__.py  api.py
app/api/v1/analytics/: analytics.py  api.py  background_tasks.py
app/api/v1/endpoints/: collections.py  dbt_analytics.py  demo.py  languagetool.py  learning_materials.py  seeds.py  stats.py
app/api/v1/realtime/: api.py  collections.py
app/core/: config.py  util.py
app/crud/: __init__.py  collection.py  elastic.py  languagetool.py  learning_material.py  seeds.py  stats.py  util.py
app/dbt_analytics/: analytics.py  rpc_client.py  run.py  spellcheck.py
app/elastic/: __init__.py  dsl.py  fields.py  search.py  utils.py
app/models/: __init__.py  base.py  collection.py  collection_stats.py  elastic.py  learning_material.py  oeh_validation.py  stats.py  util.py
app/pg/: database.py  db_utils.py  metadata.py  pg_utils.py  postgres.py  queries.py  util.py
app/quality_table/: output.py
nginx/: nginx.conf.template
