[tool.poetry]
name = "metaqs-api"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = {extras = ["async"], version = "^7.13.4"}
elasticsearch-dsl = "^7.4.0"
SQLAlchemy = "~1.3"
SQLAlchemy-Utils = "^0.37.8"
databases = {extras = ["postgresql"], version = "^0.4.3"}
asyncpg = "^0.24.0"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
glom = "^20.11.0"
more-itertools = "^8.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
